log/build_2024-05-12_17-24-11/office_robot_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/dist.py:723: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/sam/tut/MIND6003/install/office_robot_pkg/lib/python3.10/site-packages/office_robot_pkg/settings.py", line 264
    norm_removed = plt.Normalize(removed_heatmap.min(), removed_heatmap: 'max')
                                                                       ^
SyntaxError: invalid syntax

